# red-wine-quality-analysis

./: .gitattributes  .gitignore  README.md  functions.py  pyproject.toml  red-wine-quality.html  red-wine-quality.ipynb  red_wine_quality.ipynb  red_wine_quality_analysis.ipynb  red_wine_quality_utils.py  requirements.txt  wine_quality.db
.ipynb_checkpoints/: red-wine-quality-checkpoint.ipynb
data/: wine_quality.db
notebooks/: red_wine_quality_analysis.ipynb
red_wine_quality_analysis.egg-info/: PKG-INFO  SOURCES.txt
src/red_wine_quality_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: red_wine_quality_utils.py
tests/: test_red_wine_quality_utils.py
wine/: pyvenv.cfg
