[project]
name = "red-wine-quality-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs==25.1.0",
    "fastjsonschema==2.21.1",
    "ipython==8.32.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "statsmodels==0.14.4",
    "jupyter-core==5.7.2",
    "kaleido==0.2.1",
    "nbformat==5.10.4",
    "platformdirs==4.3.6",
    "referencing==0.36.2",
    "rpds-py==0.22.3",
    "traitlets==5.14.3",
]
