[project]
name = "red-wine-quality-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs==25.1.0",
    "fastjsonschema==2.21.1",
    "ipython==8.32.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "statsmodels==0.14.4",
    "jupyter-core==5.7.2",
    "kaleido==0.2.1",
    "nbformat==5.10.4",
    "platformdirs==4.3.6",
    "referencing==0.36.2",
    "rpds-py==0.22.3",
    "traitlets==5.14.3",
    "asttokens==3.0.0",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "executing==2.2.0",
    "fonttools==4.56.0",
    "iniconfig==2.0.0",
    "jedi==0.19.2",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "matplotlib-inline==0.1.7",
    "narwhals==1.26.0",
    "packaging==24.2",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "threadpoolctl==3.5.0",
    "tzdata==2025.1",
    "wcwidth==0.2.13",
]
